--- a/widget.ui
+++ b/widget.ui
@@ -10,7 +10,7 @@
     <x>0</x>
     <y>0</y>
     <width>821</width>
-    <height>430</height>
+    <height>447</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -26,7 +26,33 @@
    <string>Widget</string>
   </property>
   <layout class="QGridLayout" name="gridLayout_2">
-   <item row="0" column="4" rowspan="6">
+   <item row="8" column="2">
+    <spacer name="horizontalSpacer_4">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>40</width>
+       <height>20</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item row="8" column="0">
+    <spacer name="horizontalSpacer_2">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>40</width>
+       <height>1</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item row="0" column="5" rowspan="6">
     <spacer name="verticalSpacer">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
@@ -42,12 +68,42 @@
      </property>
     </spacer>
    </item>
-   <item row="3" column="3">
+   <item row="3" column="0">
+    <widget class="QPushButton" name="LineButton">
+     <property name="text">
+      <string>Line</string>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="4">
     <widget class="QPushButton" name="pushButton">
      <property name="text">
       <string>not working yet</string>
      </property>
     </widget>
+   </item>
+   <item row="7" column="0" colspan="8">
+    <widget class="QGraphicsView" name="graphicsView"/>
+   </item>
+   <item row="3" column="1">
+    <widget class="QPushButton" name="squareButton">
+     <property name="text">
+      <string>square</string>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="0" colspan="2">
+    <spacer name="horizontalSpacer">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>40</width>
+       <height>20</height>
+      </size>
+     </property>
+    </spacer>
    </item>
    <item row="4" column="1">
     <widget class="QComboBox" name="comboBox">
@@ -68,17 +124,24 @@
      </item>
     </widget>
    </item>
-   <item row="3" column="0">
-    <widget class="QPushButton" name="LineButton">
+   <item row="4" column="2">
+    <widget class="QRadioButton" name="radioButton">
      <property name="text">
-      <string>Line</string>
+      <string>Pen</string>
      </property>
     </widget>
    </item>
-   <item row="3" column="1">
-    <widget class="QPushButton" name="squareButton">
+   <item row="3" column="6">
+    <widget class="QPushButton" name="screenshotButton">
      <property name="text">
-      <string>square</string>
+      <string>Screenshot</string>
+     </property>
+    </widget>
+   </item>
+   <item row="4" column="4">
+    <widget class="QSpinBox" name="spinBox">
+     <property name="maximum">
+      <number>99</number>
      </property>
     </widget>
    </item>
@@ -89,10 +152,10 @@
      </property>
     </widget>
    </item>
-   <item row="4" column="2">
-    <widget class="QRadioButton" name="radioButton">
+   <item row="4" column="6">
+    <widget class="QCheckBox" name="fullScreen">
      <property name="text">
-      <string>Pen</string>
+      <string>full screen</string>
      </property>
     </widget>
    </item>
@@ -124,14 +187,7 @@
      </property>
     </widget>
    </item>
-   <item row="4" column="3">
-    <widget class="QSpinBox" name="spinBox">
-     <property name="maximum">
-      <number>99</number>
-     </property>
-    </widget>
-   </item>
-   <item row="4" column="6">
+   <item row="4" column="7">
     <widget class="QSlider" name="imageScale">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
@@ -159,11 +215,8 @@
      </property>
     </widget>
    </item>
-   <item row="7" column="0" colspan="7">
-    <widget class="QGraphicsView" name="graphicsView"/>
-   </item>
-   <item row="0" column="0" colspan="2">
-    <spacer name="horizontalSpacer">
+   <item row="8" column="1">
+    <spacer name="horizontalSpacer_3">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
      </property>
@@ -175,19 +228,51 @@
      </property>
     </spacer>
    </item>
-   <item row="4" column="5">
-    <widget class="QCheckBox" name="fullScreen">
-     <property name="text">
-      <string>full screen</string>
+   <item row="8" column="3">
+    <spacer name="horizontalSpacer_5">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>40</width>
+       <height>20</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item row="8" column="6" colspan="2">
+    <widget class="QSlider" name="grahicsViewSize">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
      </property>
     </widget>
    </item>
-   <item row="3" column="5">
-    <widget class="QPushButton" name="screenshotButton">
-     <property name="text">
-      <string>Screenshot</string>
+   <item row="8" column="4">
+    <spacer name="horizontalSpacer_6">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
      </property>
-    </widget>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>40</width>
+       <height>20</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item row="8" column="5">
+    <spacer name="horizontalSpacer_7">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>40</width>
+       <height>20</height>
+      </size>
+     </property>
+    </spacer>
    </item>
   </layout>
  </widget>
